<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_task_1"
        android:orderInCategory="1"
        android:title="@string/action_task_1"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_task_2"
        android:orderInCategory="2"
        android:title="@string/action_task_2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_task_3"
        android:orderInCategory="3"
        android:title="@string/action_task_3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_task_4"
        android:orderInCategory="4"
        android:title="@string/action_task_4"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_task_5"
        android:orderInCategory="5"
        android:title="@string/action_task_5"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_task_6"
        android:orderInCategory="6"
        android:title="@string/action_task_6"
        app:showAsAction="never" />
        
</menu>